src/objects/Payment__c.object
<CustomObject>
    <description>Details of payments made through pay.gov</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>The Application abbreviation.  For a refund, is used to determine the pay.gov TCS_APP_ID.</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Privacy Shield</fullName>
                    <default>true</default>
                    <label>Privacy Shield</label>
                </value>
                <value>
                    <fullName>Event or Service</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                    <isActive>false</isActive>
                    <label>PS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <description>Participant on the Order record.</description>
        <formula>Order__r.Participant__r.Name</formula>
        <inlineHelpText>Participant on the Order record.</inlineHelpText>
        <label>Participant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Gov_Tracking_Id__c</fullName>
        <description>The tracking Id returned by pay.gov</description>
        <label>Pay Gov Tracking ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>The date of the payment, as returned by pay.gov</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Payment Type for the transaction</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PLASTIC_CARD</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>ACH_CREDIT</fullName>
                </value>
                <value>
                    <fullName>AMAZON</fullName>
                </value>
                <value>
                    <fullName>PAYPAL</fullName>
                </value>
                <value>
                    <fullName>DWOLLA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Refunds__c</fullName>
        <description>The total amount of refunds successfully processed for this payment.</description>
        <label>Total Refunds</label>
        <summarizedField>Refund__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Refund__c.Transaction_Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryForeignKey>Refund__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <description>The transaction amount</description>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>The DateTime of the payment transaction, as returned from pay.gov</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <description>The payment transaction status, as returned by pay.gov</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Pay_Gov_Tracking_Id__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Total_Refunds__c</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SP{000000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>